--- a/style.css
+++ b/style.css
@@ -50,9 +50,13 @@ a:visited {
   color: #222288;
 }
 
+cs {
+  padding: 4px;
+}
 code {
   font-family: Menlo, Monaco, 'Lucida Console', Consolas, monospace;
   font-size: 85%;
+  padding:4px;
   margin: 0;
   background-color: #eee;
 }
@@ -95,7 +99,7 @@ pre code {
 .sourceCode {
  background-color: #eee;
  overflow: visible;
- padding: 4px;
+ padding: 0px;
 }
 hr {
   background-color: #1a1a1a;
@@ -142,7 +146,7 @@ header {
 #TOC a:not(:hover) {
   text-decoration: none;
 }
-code{white-space: pre-wrap;}
+code{white-space: pre-wrap;padding:4px;}
 span.smallcaps{font-variant: small-caps;}
 span.underline{text-decoration: underline;}
 div.column{display: inline-block; vertical-align: top; width: 50%;}
@@ -153,10 +157,10 @@ pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
 .sourceCode { overflow: visible; }
 code.sourceCode > span { color: inherit; text-decoration: inherit; }
-div.sourceCode { margin: 1em 0; }
+div.sourceCode { margin: 1em 0; padding:4px; }
 pre.sourceCode { margin: 0; }
 @media screen {
-div.sourceCode { overflow: auto; }
+  div.sourceCode { overflow: auto; }
 }
 @media print {
 pre > code.sourceCode { white-space: pre-wrap; }
